deploy - fix spacing between images

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -973,6 +973,8 @@ article.post .card-e {
 }
 .project-body img {
   width: 100%;
+  margin-top: -1px;
+  margin-bottom: -1px;
 }
 .project-body article {
   margin: 0 9rem;
